--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 		top: 526px;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: Custom_Size___1.html;
+		--web-action-target: log.html;
 		cursor: pointer;
 	}
 	#SIGN_UP {
@@ -462,7 +462,7 @@
 		white-space: nowrap;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: Custom_Size___1.html;
+		--web-action-target: log.html;
 		cursor: pointer;
 		text-align: left;
 		font-family: Segoe UI;
@@ -3429,9 +3429,9 @@ window.application = new Application();
 	<div id="Contact">
 		<span>Contact</span>
 	</div>
-	<img id="Image_1" src="Image_1.png" srcset="Image_1.png 1x, Image_1@2x.png 2x">
+	<img id="Image_1" src="Image_1.png" srcset="Image_1.png 1x,Image_1.png 2x">
 		
-	<img id="Web_1920__1" src="Web_1920__1.png" srcset="Web_1920__1.png 1x, Web_1920__1@2x.png 2x">
+	<img id="Web_1920__1" src="Web_1920__1.png" srcset="Web_1920__1.png 1x,Web_1920__1.png 2x">
 		
 	<svg class="Rectangle_5_x">
 		<linearGradient id="Rectangle_5_x" spreadMethod="pad" x1="0.5" x2="0.5" y1="0" y2="1">
