--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 		white-space: nowrap;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: log.html;
+		--web-action-target: sign.html;
 		cursor: pointer;
 		text-align: left;
 		font-family: Segoe UI;
