--- a/sign.html
+++ b/sign.html
@@ -4,7 +4,7 @@
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Born Designers</title>
+<title>Custom Size – 1</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
 		--web-view-name: Custom Size – 1;
@@ -3154,8 +3154,8 @@ window.application = new Application();
 </script>
 </head>
 <body>
-<div id="Custom_Size__1" style="transform-origin: 0px 0px;">
-	<img id="Image_2" src="./signn_files/Image_2.png" srcset="Image_2.png 1x, Image_2@2x.png 2x">
+<div id="sign">
+	<img id="Image_2" src="./signnn_files/Image_2.png" srcset="Image_2.png 1x, Image_2@2x.png 2x">
 		
 	<svg class="Rectangle_12">
 		<rect id="Rectangle_12" rx="0" ry="0" x="0" y="0" width="1300" height="768">
@@ -3206,6 +3206,5 @@ window.application = new Application();
 		<span>Sign up</span>
 	</div>
 </div>
-
 
 </body></html>
