--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 		white-space: nowrap;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: log.html;
+		--web-action-target: sign.html;
 		cursor: pointer;
 		text-align: left;
 		font-family: Myanmar Text;
@@ -450,7 +450,7 @@
 		top: 526px;
 		--web-animation: fadein 0.3s ease-out;
 		--web-action-type: page;
-		--web-action-target: log.html;
+		--web-action-target: sign.html;
 		cursor: pointer;
 	}
 	#SIGN_UP {
