--- a/sign.html
+++ b/sign.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- saved from url=(0060)file:///C:/Users/amr_0/OneDrive/Desktop/Custom_Size___1.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<html>
+<head>
+<meta charset="utf-8"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Custom Size – 1</title>
+<title>Born Designers</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
 		--web-view-name: Custom Size – 1;
@@ -3154,8 +3154,8 @@ window.application = new Application();
 </script>
 </head>
 <body>
-<div id="sign">
-	<img id="Image_2" src="./signnn_files/Image_2.png" srcset="Image_2.png 1x, Image_2@2x.png 2x">
+<div id="Custom_Size__1">
+	<img id="Image_2" src="Image_2.png" srcset="Image_2.png 1x, Image_2@2x.png 2x">
 		
 	<svg class="Rectangle_12">
 		<rect id="Rectangle_12" rx="0" ry="0" x="0" y="0" width="1300" height="768">
@@ -3206,5 +3206,5 @@ window.application = new Application();
 		<span>Sign up</span>
 	</div>
 </div>
-
-</body></html>
+</body>
+</html>
