--- a/sign.html
+++ b/sign.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8"/>
-<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+<!-- saved from url=(0060)file:///C:/Users/amr_0/OneDrive/Desktop/Custom_Size___2.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Born Designers</title>
+<title>Custom Size – 2</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
-		--web-view-name: Custom Size – 1;
-		--web-view-id: Custom_Size__1;
+		--web-view-name: Custom Size – 2;
+		--web-view-id: Custom_Size__2;
 		--web-scale-on-resize: true;
 		--web-enable-deep-linking: true;
 	}
 	:root {
-		--web-view-ids: Custom_Size__1;
+		--web-view-ids: Custom_Size__2;
 	}
 	* {
 		margin: 0;
@@ -21,14 +21,14 @@
 		box-sizing: border-box;
 		border: none;
 	}
-	#Custom_Size__1 {
+	#Custom_Size__2 {
 		position: absolute;
 		width: 1300px;
 		height: 768px;
 		background-color: rgba(255,255,255,1);
 		overflow: hidden;
-		--web-view-name: Custom Size – 1;
-		--web-view-id: Custom_Size__1;
+		--web-view-name: Custom Size – 2;
+		--web-view-id: Custom_Size__2;
 		--web-scale-on-resize: true;
 		--web-enable-deep-linking: true;
 	}
@@ -65,10 +65,10 @@
 	.Rectangle_13 {
 		position: absolute;
 		overflow: visible;
-		width: 653px;
-		height: 596px;
-		left: 354px;
-		top: 142px;
+		width: 503px;
+		height: 459px;
+		left: 420px;
+		top: 205px;
 	}
 	#Rectangle_14 {
 		fill: rgba(255,255,255,1);
@@ -84,15 +84,15 @@
 		overflow: visible;
 		width: 393px;
 		height: 92px;
-		left: 420px;
-		top: 261px;
+		left: 450px;
+		top: 324px;
 	}
-	#Email {
-		left: 473px;
-		top: 207px;
+	#Email_or_User_Name {
+		left: 503px;
+		top: 270px;
 		position: absolute;
 		overflow: visible;
-		width: 80px;
+		width: 289px;
 		white-space: nowrap;
 		text-align: left;
 		font-family: Segoe UI;
@@ -115,53 +115,8 @@
 		overflow: visible;
 		width: 393px;
 		height: 92px;
-		left: 420px;
-		top: 399px;
-	}
-	#Rectangle_16 {
-		fill: rgba(255,255,255,1);
-		stroke: rgba(112,112,112,1);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.Rectangle_16 {
-		position: absolute;
-		overflow: visible;
-		width: 393px;
-		height: 91px;
-		left: 420px;
-		top: 537px;
-	}
-	#User_Name {
-		left: 473px;
-		top: 351px;
-		position: absolute;
-		overflow: visible;
-		width: 161px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Segoe UI;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 31px;
-		color: rgba(11,10,10,1);
-	}
-	#Password {
-		left: 473px;
-		top: 493px;
-		position: absolute;
-		overflow: visible;
-		width: 138px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Segoe UI;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 31px;
-		color: rgba(11,10,10,1);
+		left: 450px;
+		top: 462px;
 	}
 	#Ellipse_1 {
 		opacity: 0.68;
@@ -172,8 +127,8 @@
 		overflow: visible;
 		width: 141px;
 		height: 142px;
-		left: 583px;
-		top: 0px;
+		left: 576px;
+		top: 63px;
 	}
 	#Ellipse_2 {
 		fill: transparent;
@@ -189,8 +144,8 @@
 		overflow: visible;
 		width: 56px;
 		height: 56px;
-		left: 626px;
-		top: 22px;
+		left: 619px;
+		top: 85px;
 	}
 	#Polygon_6 {
 		fill: transparent;
@@ -206,9 +161,23 @@
 		position: absolute;
 		width: 75px;
 		height: 60px;
-		left: 617px;
-		top: 71px;
+		left: 610px;
+		top: 134px;
 		transform: matrix(1,0,0,1,0,0);
+	}
+	#Password {
+		left: 503px;
+		top: 429px;
+		position: absolute;
+		overflow: visible;
+		width: 138px;
+		white-space: nowrap;
+		text-align: left;
+		font-family: Segoe UI;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 31px;
+		color: rgba(11,10,10,1);
 	}
 	#Rectangle_17 {
 		fill: rgba(255,255,255,1);
@@ -222,23 +191,23 @@
 	.Rectangle_17 {
 		position: absolute;
 		overflow: visible;
-		width: 239px;
-		height: 82px;
-		left: 724px;
-		top: 646px;
+		width: 179px;
+		height: 66px;
+		left: 702px;
+		top: 580px;
 	}
-	#Sign_up {
-		left: 756px;
-		top: 652px;
+	#Login {
+		left: 727px;
+		top: 578px;
 		position: absolute;
 		overflow: visible;
-		width: 165px;
+		width: 119px;
 		white-space: nowrap;
 		text-align: left;
 		font-family: Segoe UI;
 		font-style: normal;
 		font-weight: bold;
-		font-size: 46px;
+		font-size: 45px;
 		color: rgba(11,10,10,1);
 	}
 </style>
@@ -3154,38 +3123,28 @@ window.application = new Application();
 </script>
 </head>
 <body>
-<div id="Custom_Size__1">
-	<img id="Image_2" src="Image_2.png" srcset="Image_2.png 1x, Image_2@2x.png 2x">
+<div id="Custom_Size__2" style="transform-origin: 0px 0px;">
+	<img id="Image_2" src="./sign_files/Image_2.png" srcset="Image_2.png 1x, Image_2@2x.png 2x">
 		
 	<svg class="Rectangle_12">
 		<rect id="Rectangle_12" rx="0" ry="0" x="0" y="0" width="1300" height="768">
 		</rect>
 	</svg>
 	<svg class="Rectangle_13">
-		<rect id="Rectangle_13" rx="79" ry="79" x="0" y="0" width="653" height="596">
+		<rect id="Rectangle_13" rx="88" ry="88" x="0" y="0" width="503" height="459">
 		</rect>
 	</svg>
 	<svg class="Rectangle_14">
 		<rect id="Rectangle_14" rx="46" ry="46" x="0" y="0" width="393" height="92">
 		</rect>
 	</svg>
-	<div id="Email">
-		<span>Email</span>
+	<div id="Email_or_User_Name">
+		<span>Email or User Name</span>
 	</div>
 	<svg class="Rectangle_15">
 		<rect id="Rectangle_15" rx="46" ry="46" x="0" y="0" width="393" height="92">
 		</rect>
 	</svg>
-	<svg class="Rectangle_16">
-		<rect id="Rectangle_16" rx="45.5" ry="45.5" x="0" y="0" width="393" height="91">
-		</rect>
-	</svg>
-	<div id="User_Name">
-		<span>User Name</span>
-	</div>
-	<div id="Password">
-		<span>Password</span>
-	</div>
 	<svg class="Ellipse_1">
 		<ellipse id="Ellipse_1" rx="70.5" ry="71" cx="70.5" cy="71">
 		</ellipse>
@@ -3195,16 +3154,19 @@ window.application = new Application();
 		</ellipse>
 	</svg>
 	<svg class="Polygon_6" viewBox="0 0 75 60">
-		<path id="Polygon_6" d="M 30.71599006652832 10.8543815612793 C 33.84932708740234 5.841036319732666 41.1506233215332 5.841033458709717 44.28396224975586 10.85437679290771 L 67.34999847412109 47.76000595092773 C 70.68024444580078 53.0883903503418 66.84950256347656 60 60.56601333618164 60 L 14.43397521972656 60 C 8.150491714477539 60 4.31974983215332 53.08839416503906 7.649987697601318 47.760009765625 Z">
+		<path id="Polygon_6" d="M 30.71601104736328 10.85437774658203 C 33.84934997558594 5.841032981872559 41.15064239501953 5.841032981872559 44.28398132324219 10.85437774658203 L 67.35000610351562 47.76000595092773 C 70.68024444580078 53.0883903503418 66.84950256347656 60 60.56601715087891 60 L 14.43398189544678 60 C 8.150497436523438 60 4.319754600524902 53.0883903503418 7.649993896484375 47.76000595092773 Z">
 		</path>
 	</svg>
+	<div id="Password">
+		<span>Password</span>
+	</div>
 	<svg class="Rectangle_17">
-		<rect id="Rectangle_17" rx="41" ry="41" x="0" y="0" width="239" height="82">
+		<rect id="Rectangle_17" rx="33" ry="33" x="0" y="0" width="179" height="66">
 		</rect>
 	</svg>
-	<div id="Sign_up">
-		<span>Sign up</span>
+	<div id="Login">
+		<span>Login</span>
 	</div>
 </div>
-</body>
-</html>
+
+</body></html>
